--- a/main.html
+++ b/main.html
@@ -8,6 +8,30 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<h1>Lucknow</h1>
+	<p> Lucknow, the capital city of the northern Indian state of Uttar Pradesh, 
+		is a place steeped in history, culture, and tradition. Nestled along the 
+		banks of the Gomti River, Lucknow has earned its reputation as the "City of Nawabs" 
+		due to its association with the Nawabs of Awadh, who were known for their extravagant 
+		lifestyle and patronage of arts and culture.</p>
+	<br>
+	<h2>Attraction</h2>
+	<ol>
+		<li> <i>jdhs</i> lorem</li>
+		<li> <i>jdhs</i>  Lorem</li>   
+		<li> <i>jdhs</i>  Lorem</li>
+		<li> <b>jdjd</b> Lorem</li>
+		<li> <i>jdhs</i> Lorem</li>
+	</ol>
+	<h2>Food Attraction</h2>
+	<ul> 
+		<li> <i>jdhs</i> lorem</li>
+		<li> <i>jdhs</i>  Lorem</li>   
+		<li> <i>jdhs</i>  Lorem</li>
+		<li> <b>jdjd</b> Lorem</li>
+		<li> <i>jdhs</i> Lorem</li>
+	</ul>
+	
     <script type="text/javascript" src="./script.js">
 </script>
 
